First Commit Not usable on mobile due to scaling issues

--- a/public/style.css
+++ b/public/style.css
@@ -13,9 +13,9 @@ body {
 
 .container {
   position: relative;
-  width: 80%;
-  height: 85%;
-  top: 5%;
+  width: 100%;
+  height: 90%;
+
   margin-left: auto;
   margin-right: auto;
   outline: solid black 1px;
@@ -24,18 +24,8 @@ body {
   flex-direction: column-reverse;
 }
 
-.header {
-  outline: none;
-  position: fixed;
-  right: 0;
-  width: 90%;
-  height: 5%;
-}
 
-.header p {
-  text-align: center;
-  padding-top: 5px;
-}
+
 
 form {
   position: absolute;
@@ -47,23 +37,24 @@ form input {
   outline: none;
   position: fixed;
   bottom: 0;
-  padding: 15px;
-  width: 71%;
+  left: 15px;
+  width: 100%;
   height: 9.7%;
-  right: 14%;
+  
+  border: none;
 }
 
 form button {
   position: fixed;
   float: right;
   bottom: 0;
-  right: 5%;
-
+  right: 0%;
   width: 9%;
-  height: 9.7%;
+  height: 9.8%;
   outline: none;
-  background: rgb(130, 224, 255);
-  /* border: none; */
+  background: #0084ff;
+  border: none; 
+  color: #ffff;
 }
 
 #users {
